--- a/index.html
+++ b/index.html
@@ -3,39 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Custom Territorial Client</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 20px;
-    }
-    #settingsPanel {
-      display: none;
-      margin: 20px auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      width: 350px;
-      background-color: #f9f9f9;
-    }
-    .input-group {
-      margin: 10px 0;
-      text-align: left;
-    }
-    .combined-item {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 8px;
-    }
-    .combined-item input {
-      flex: 1;
-      padding: 5px;
-    }
-    button {
-      margin: 10px 5px;
-      padding: 8px 16px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Main button to open settings -->
